@@ -4,9 +4,9 @@ AC_CONFIG_HEADER(common/config.h)
 AC_PREFIX_DEFAULT(/usr/local/nagios)
 
 PKG_NAME=nrpe
-PKG_VERSION="1.5"
+PKG_VERSION="1.6"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="06-03-2002"
+PKG_REL_DATE="07-08-2002"
 
 dnl Figure out how to invoke "install" and what install options to use.
 
