@@ -6,6 +6,9 @@ NRPE Changelog
 1.6 - ??/??/2002
 ----------------
 - Updated sample commands to match new plugin argument format
+- Added sample init scripts for FreeBSD and Debian (Andrew Ryder)
+- Syntax changes (-H option specifies host name in check_nrpe, 
+  -c option specifies config file in nrpe)
 
 
 1.5 - 06/03/2002
